<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/titleLayout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textColor="@color/black"
            android:visibility="visible" />
        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/langPref" />
        <TextView
            android:id="@+id/done"
            android:padding="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/done" />
    </RelativeLayout>
    <TextView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_below="@+id/titleLayout"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitleLangText"
        android:textColor="@color/white"/>

    <RadioGroup
        android:layout_centerVertical="true"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:padding="0px"
        android:id="@+id/chooseLangRg"
        android:background="@drawable/radio_group_bg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <RadioButton
            android:checked="true"
            android:text="@string/engUSLang"
            style="@style/radiobutton"
            android:id="@+id/enUsRb"
            android:layout_width="match_parent"
            android:minWidth="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_marginTop="8dp"
            style="@style/radiobutton"
            android:id="@+id/engUkRb"
            android:text="@string/engUKLang"
            android:layout_width="match_parent"
            android:minWidth="150dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_marginTop="8dp"
            style="@style/radiobutton"
            android:id="@+id/engINRb"
            android:text="@string/engINLang"
            android:layout_width="match_parent"
            android:minWidth="150dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_marginTop="8dp"
            style="@style/radiobutton"
            android:id="@+id/deutschRb"
            android:text="@string/deutschLang"
            android:layout_width="match_parent"
            android:minWidth="150dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_marginTop="8dp"
            style="@style/radiobutton"
            android:id="@+id/japanRb"
            android:text="@string/japaneseLang"
            android:layout_width="match_parent"
            android:minWidth="150dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </RadioGroup>

</RelativeLayout>