<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/ask_alexa1"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:id="@+id/textView11"
            android:gravity="center"
            android:background="@drawable/orange_chat"/>
        <TextView
            android:text="@string/ask_alexa2"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:background="@drawable/lightgrey_chat"
            android:layout_width="240dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_height="40dp"
            android:id="@+id/textView12" />
        <TextView
            android:gravity="center"
            android:background="@drawable/orange_chat"
            android:layout_width="240dp"
            android:paddingLeft="10dp"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/ask_alexa3"
            android:textColor="@color/white"
            android:id="@+id/textView13" />
        <TextView
            android:layout_gravity="right"
            android:background="@drawable/lightgrey_chat"
            android:layout_width="240dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_height="40dp"
            android:id="@+id/textView14"
            android:textColor="@color/white"
            android:text="@string/ask_alexa4" />
    </LinearLayout>

</RelativeLayout>